// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component render Should render setting content later 1`] = `
<body>
  <my-component first="Donald" last="Duck">
    <mock:shadow-root>
      <div class="nice">
        <span>
          Hello, World! I'm Donald Duck
        </span>
        <button>
          Click Me!
        </button>
        <input>
        <slot></slot>
      </div>
    </mock:shadow-root>
    Some Text
  </my-component>
</body>
`;

exports[`component render Should render with serializing shadow dom 1`] = `
<my-component first="Donald" last="Duck">
  <mock:shadow-root>
    <div class="nice">
      <span>
        Hello, World! I'm Donald Duck
      </span>
      <button>
        Click Me!
      </button>
      <input>
      <slot></slot>
    </div>
  </mock:shadow-root>
  Some Text
</my-component>
`;

exports[`component render Should render without serializing shadow dom 1`] = `
<my-component first="Donald" last="Duck">
  <!---->
  <div class="nice">
    <span>
      Hello, World! I'm Donald Duck
    </span>
    <button>
      Click Me!
    </button>
    <input>
    Some Text
  </div>
</my-component>
`;
